deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-actividades
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: javierescobar12/actividades-api-rust
        ports:
        - containerPort: 5050
