ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actividades-api-ingress
spec:
  rules:
  - host: actividades-api.com
    http:
      paths:
      - path: /insertar-actividad  
        pathType: Prefix
        backend:
          service:
            name: api-service  
            port:
              number: 5050  
      - path: /actividad  
        pathType: Prefix
        backend:
          service:
            name: api-service  
            port:
              number: 5050       
      - path: /actividad-id
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 5050 
      - path: /borrar-actividad
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 5050
